--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "Pidor Bot",
   "author": "Kryvonis",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon",
+    "start": "tsc && node dist/index.js",
+    "start:dev": "nodemon",
     "tsc": "tsc --build --incremental"
+  },
+  "engines": {
+    "node": "^14.2.1"
   },
   "license": "ISC",
   "devDependencies": {
